# ajblog_pub

./: README.md  manage.py  pyproject.toml
AJBlog/: asgi.py  urls.py  wsgi.py
AJBlog/settings/: common.py  local.py  production.py
blog/: admin.py  models.py  search_indexes.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/static/css/: main.css
blog/static/js/: custom_about.js  custom_detail.js  custom_fluid_configs.js  events.js
blog/templatetags/: detail_tag.py
templates/blog/: about.html  base.html  category.html  detail.html  index.html
templates/search/: search.html
